Also document termkey_advisereadable()

--- a/termkey_new.3
+++ b/termkey_new.3
@@ -40,4 +40,5 @@ device, do not call the \fBtcsetattr\fP() \fBtermios\fP function on it to set it
 If successful, \fBtermkey_new\fP() returns a pointer to the new instance. On failure, \fBNULL\fP is returned. \fBtermkey_free\fP() returns no value.
 .SH "SEE ALSO"
 .BR termkey_waitkey (3),
+.BR termkey_advisereadable (3),
 .BR termkey_getkey (3)
