--- a/termkey_getkey.3
+++ b/termkey_getkey.3
@@ -16,7 +16,7 @@ Link with \fI-ltermkey\fP.
 .PP
 \fBtermkey_getkey_force\fP is similar to \fBtermkey_getkey\fP but will not return \fBTERMKEY_RES_AGAIN\fP if a partial match is found. Instead, it will force an interpretation of the bytes, even if this means interpreting the start of an Escape-prefixed multi-byte sequence as a literal "Escape" key followed by normal letters.
 .PP
-Neither of these functions will block or perform any IO operations on the underlying filehandle. For a blocking wait, see \fBtermkey_waitkey\fP.
+Neither of these functions will block or perform any IO operations on the underlying filehandle. To use the instance in an asynchronous program, see \fBtermkey_advisereadable\fP(3). For a blocking call suitable for use in a synchronous program, use \fBtermkey_waitkey\fP(3) instead of \fBtermkey_getkey\fP().
 .PP
 The \fItermkey_key\fP structure is defined as follows:
 .PP
@@ -67,6 +67,7 @@ No key events are ready and the terminal has been closed, so no more will arrive
 No key event is ready yet, but a partial one has been found. This is only returned by \fBtermkey_getkey\fP(). To obtain the partial result even if it never completes, use \fBtermkey_getkey_force\fP().
 .SH "SEE ALSO"
 .BR termkey_new (3),
+.BR termkey_advisereadable (3),
 .BR termkey_waitkey (3),
 .BR termkey_setwaittime (3),
 .BR termkey_get_keyname (3),
