Renamed termkey_{set,get}waittime() to termkey_{set,get}_waittime() to be more consistent

--- a/termkey_advisereadable.3
+++ b/termkey_advisereadable.3
@@ -27,4 +27,4 @@ No nore bytes were read.
 .BR termkey_new (3),
 .BR termkey_getkey (3),
 .BR termkey_waitkey (3),
-.BR termkey_setwaittime (3)
+.BR termkey_set_waittime (3)
