--- a/termkey_new.3
+++ b/termkey_new.3
@@ -48,4 +48,5 @@ If successful, \fBtermkey_new\fP() returns a pointer to the new instance. On fai
 .BR termkey_waitkey (3),
 .BR termkey_advisereadable (3),
 .BR termkey_getkey (3),
-.BR termkey_get_flags (3)
+.BR termkey_get_flags (3),
+.BR termkey_get_fd (3)
