--- a/termkey_get_fd.3
+++ b/termkey_get_fd.3
@@ -5,7 +5,7 @@ termkey_get_fd \- obtain the file descriptor for the terminal
 .nf
 .B #include <termkey.h>
 .sp
-.BI "void termkey_get_fd(termkey_t *" tk );
+.BI "int termkey_get_fd(termkey_t *" tk );
 .fi
 .sp
 Link with \fI-ltermkey\fP.
