Renamed all type names to CamelCaseNames for visual distinctness, separate from variables/functions

--- a/termkey_advisereadable.3
+++ b/termkey_advisereadable.3
@@ -5,7 +5,7 @@ termkey_advisereadable \- read more bytes from the underlying terminal
 .nf
 .B #include <termkey.h>
 .sp
-.BI "termkey_result termkey_advisereadable(termkey_t *" tk );
+.BI "TermKeyResult termkey_advisereadable(TermKey *" tk );
 .fi
 .sp
 Link with \fI-ltermkey\fP.
