--- a/termkey_get_keyname.3
+++ b/termkey_get_keyname.3
@@ -5,7 +5,7 @@ termkey_get_keyname \- return a string name for a symbolic key
 .nf
 .B #include <termkey.h>
 .sp
-.BI "const char *termkey_get_keyname(termkey_t *" tk ", termkey_keysym " sym );
+.BI "const char *termkey_get_keyname(TermKey *" tk ", TermKeySym " sym );
 .fi
 .sp
 Link with \fI-ltermkey\fP.
