--- a/termkey_keyname2sym.3
+++ b/termkey_keyname2sym.3
@@ -5,7 +5,7 @@ termkey_keyname2sym \- look up a symbolic key value for a string name
 .nf
 .B #include <termkey.h>
 .sp
-.BI "termkey_keysym termkey_keyname2sym(termkey_t *" tk ", const char *" keyname );
+.BI "TermKeySym termkey_keyname2sym(TermKey *" tk ", const char *" keyname );
 .fi
 .sp
 Link with \fI-ltermkey\fP.
