--- a/termkey_set_flags.3
+++ b/termkey_set_flags.3
@@ -5,9 +5,9 @@ termkey_set_flags, termkey_get_flags \- control the operational flags
 .nf
 .B #include <termkey.h>
 .sp
-.BI "void termkey_set_flags(termkey_t *" tk ", int " newflags );
+.BI "void termkey_set_flags(TermKey *" tk ", int " newflags );
 .br
-.BI "int termkey_get_flags(termkey_t *" tk );
+.BI "int termkey_get_flags(TermKey *" tk );
 .fi
 .sp
 Link with \fI-ltermkey\fP.
