--- a/termkey_set_waittime.3
+++ b/termkey_set_waittime.3
@@ -5,9 +5,9 @@ termkey_set_waittime, termkey_get_waittime \- control the wait time for multibyt
 .nf
 .B #include <termkey.h>
 .sp
-.BI "void termkey_set_waittime(termkey_t *" tk ", int " msec );
+.BI "void termkey_set_waittime(TermKey *" tk ", int " msec );
 .br
-.BI "int termkey_get_waittime(termkey_t *" tk );
+.BI "int termkey_get_waittime(TermKey *" tk );
 .fi
 .sp
 Link with \fI-ltermkey\fP.
