--- a/termkey_new.3
+++ b/termkey_new.3
@@ -7,14 +7,14 @@ termkey_new, termkey_destroy \- create or destroy new termkey instance
 .sp
 .BI "TERMKEY_CHECK_VERSION;"
 .br
-.BI "termkey_tk *termkey_new(int " fd ", int " flags );
+.BI "TermKey *termkey_new(int " fd ", int " flags );
 .br
-.BI "void termkey_destroy(termkey_t *" tk );
+.BI "void termkey_destroy(TermKey *" tk );
 .fi
 .sp
 Link with \fI\-ltermkey\fP.
 .SH DESCRIPTION
-\fBtermkey_new\fP() creates a new termkey instance connected to the file handle opened by \fIfd\fP using the \fIflags\fP. The \fBtermkey_tk\fP structure should be considered opaque; its contents are not intended for use outside of the library.
+\fBtermkey_new\fP() creates a new termkey instance connected to the file handle opened by \fIfd\fP using the \fIflags\fP. The \fBTermKey\fP structure should be considered opaque; its contents are not intended for use outside of the library.
 .PP
 \fBtermkey_destroy\fP() destroys the given instance and releases any resources controlled by it. It will not close the underlying filehandle given as the \fIfd\fP argument to \fBtermkey_new\fP().
 .PP
