Allow formatting the mouse position when rendering an event to a string

--- a/termkey_snprint_key.3
+++ b/termkey_snprint_key.3
@@ -26,6 +26,9 @@ Use the name "Meta" or the letter "M" instead of "Alt" or "A".
 .TP
 .B TERMKEY_FORMAT_WRAPBRACKET
 If the key event is a special key instead of unmodified Unicode, wrap it in "<brackets>".
+.TP
+.B TERMKEY_FORMAT_MOUSE_POS
+If the event is a mouse event, include the position rendered as "@ (col,line)".
 .PP
 The following shortcuts are provided for common combinations of format bits:
 .TP
