Updated manpages for function rename sprint_key -> strfkey

--- a/termkey_keyname2sym.3
+++ b/termkey_keyname2sym.3
@@ -18,4 +18,4 @@ Because the key names are stored in an array indexed by the symbol number, this 
 .SH "SEE ALSO"
 .BR termkey_new (3),
 .BR termkey_get_keyname (3),
-.BR termkey_snprint_key (3)
+.BR termkey_strfkey (3)
