--- a/termkey_get_keyname.3
+++ b/termkey_get_keyname.3
@@ -18,4 +18,4 @@ Link with \fI-ltermkey\fP.
 .BR termkey_getkey (3),
 .BR termkey_waitkey (3),
 .BR termkey_keyname2sym (3),
-.BR termkey_snprint_key (3)
+.BR termkey_strfkey (3)
