--- a/termkey_strfkey.3
+++ b/termkey_strfkey.3
@@ -1,17 +1,17 @@
-.TH TERMKEY_SNPRINT_KEY 3
+.TH TERMKEY_STRFKEY 3
 .SH NAME
-termkey_snprint_key \- format a string representing a key event
+termkey_strfkey \- format a string representing a key event
 .SH SYNOPSIS
 .nf
 .B #include <termkey.h>
 .sp
-.BI "size_t termkey_snprint_key(TermKey *" tk ", char *" buffer ", size_t " len ",
+.BI "size_t termkey_strfkey(TermKey *" tk ", char *" buffer ", size_t " len ",
 .BI "            TermKeyKey " key ", TermKeyFormat " format );
 .fi
 .sp
 Link with \fI-ltermkey\fP.
 .SH DESCRIPTION
-\fBtermkey_snprint_key\fP formats a string buffer to contain a human-readable representation of a key event. It fills the \fIbuffer\fP in a way analogous to the \fBsnprintf\fP(3) standard library function.
+\fBtermkey_strfkey\fP formats a string buffer to contain a human-readable representation of a key event. It fills the \fIbuffer\fP in a way analogous to the \fBsnprintf\fP(3) or \fBstrftime\fP(3) standard library functions. This function used to be called \fBtermkey_snprint_key\fP but was renamed after version 0.6.
 .PP
 The \fIformat\fP argument specifies the format of the output, as a bitmask of the following constants:
 .TP
@@ -34,8 +34,10 @@ The following shortcuts are provided for common combinations of format bits:
 .TP
 .B TERMKEY_FORMAT_VIM
 Shortcut to set \fBALTISMETA\fP and \fBWRAPBRACKET\fP, to give an output close to the format the \fIvim\fP editor uses.
+.PP
+When formatting a \fBTERMKEY_TYPE_UNICODE\fP key structure, this function uses the \fIutf8\fP member. If this member contains an empty string (i.e. its first character is 0) then this member will be prefilled by the function from the \fIcode.number\fP member. This can be convenient when the key structure is being constructed programatically by user code.
 .SH "RETURN VALUE"
-\fBtermkey_snprint_key\fP() returns the number of characters written to \fIbuffer\fP.
+\fBtermkey_strfkey\fP() returns the number of characters written to \fIbuffer\fP.
 .SH "SEE ALSO"
 .BR termkey_new (3),
 .BR termkey_getkey (3),
