Initial manpage for termkey_strpkey

--- a/termkey_strfkey.3
+++ b/termkey_strfkey.3
@@ -42,4 +42,5 @@ When formatting a \fBTERMKEY_TYPE_UNICODE\fP key structure, this function uses t
 .BR termkey_new (3),
 .BR termkey_getkey (3),
 .BR termkey_waitkey (3),
-.BR termkey_get_keyname (3)
+.BR termkey_get_keyname (3),
+.BR termkey_strpkey (3)
