Provide a termkey_lookup_keyname that can do partial buffer parsing

--- a/termkey_get_keyname.3
+++ b/termkey_get_keyname.3
@@ -17,5 +17,6 @@ Link with \fI-ltermkey\fP.
 .BR termkey_new (3),
 .BR termkey_getkey (3),
 .BR termkey_waitkey (3),
+.BR termkey_lookup_keyname (3),
 .BR termkey_keyname2sym (3),
 .BR termkey_strfkey (3)
