Docs fix for termkey_strfkey

--- a/termkey_strfkey.3
+++ b/termkey_strfkey.3
@@ -6,7 +6,7 @@ termkey_strfkey \- format a string representing a key event
 .B #include <termkey.h>
 .sp
 .BI "size_t termkey_strfkey(TermKey *" tk ", char *" buffer ", size_t " len ",
-.BI "            TermKeyKey " key ", TermKeyFormat " format );
+.BI "            TermKeyKey *" key ", TermKeyFormat " format );
 .fi
 .sp
 Link with \fI-ltermkey\fP.
