--- a/termkey_strpkey.3
+++ b/termkey_strpkey.3
@@ -11,7 +11,7 @@ termkey_strpkey \- parse a string representing a key event
 .sp
 Link with \fI-ltermkey\fP.
 .SH DESCRIPTION
-\fBtermkey_strpkey\fP parses a string buffer containing a human-readable representation of a key event. It fills the \fIkey\fP structure from the results of this parsing, similar to the \fBstrptime\fP(3) standard library function.
+\fBtermkey_strpkey\fP(3) parses a string buffer containing a human-readable representation of a key event. It fills the \fIkey\fP structure from the results of this parsing, similar to the \fBstrptime\fP(3) standard library function.
 .PP
 The \fIformat\fP argument specifies the format expected in the string, as a bitmask of the following constants:
 .TP
