--- a/termkey_get_fd.3
+++ b/termkey_get_fd.3
@@ -10,7 +10,7 @@ termkey_get_fd \- obtain the file descriptor for the terminal
 .sp
 Link with \fI-ltermkey\fP.
 .SH DESCRIPTION
-\fBtermkey_get_fd\fP returns the file descriptor that was passed as the \fIfd\fP argument to \fBtermkey_new\fP(3).
+\fBtermkey_get_fd\fP() returns the file descriptor that was passed as the \fIfd\fP argument to \fBtermkey_new\fP(3).
 .SH "RETURN VALUE"
 \fBtermkey_get_fd\fP() returns the current file descriptor.
 .SH "SEE ALSO"
