Fixed another couple of typoes in manpages

--- a/termkey_strpkey.3
+++ b/termkey_strpkey.3
@@ -6,7 +6,7 @@ termkey_strpkey \- parse a string representing a key event
 .B #include <termkey.h>
 .sp
 .BI "char *termkey_strpkey(TermKey *" tk ", const char *" str ",
-.BI "            TermKeyKey " key ", TermKeyFormat " format );
+.BI "            TermKeyKey *" key ", TermKeyFormat " format );
 .fi
 .sp
 Link with \fI-ltermkey\fP.
