Provide new API function to determine how much buffer space remains in the instance

--- a/termkey_new.3
+++ b/termkey_new.3
@@ -56,4 +56,5 @@ If successful, \fBtermkey_new\fP() returns a pointer to the new instance. On fai
 .BR termkey_advisereadable (3),
 .BR termkey_getkey (3),
 .BR termkey_get_flags (3),
-.BR termkey_get_fd (3)
+.BR termkey_get_fd (3),
+.BR termkey_get_buffer_remaining (3)
