--- a/man/termkey_push_bytes.3
+++ b/man/termkey_push_bytes.3
@@ -16,7 +16,7 @@ This function, along with \fBtermkey_getkey\fP(3), makes it possible to use the 
 .PP
 For synchronous usage, \fBtermkey_waitkey\fP(3) performs the input blocking task. For use against a regular stream filehandle that supports \fBread\fP(2), see \fBtermkey_advisereadable\fP(3).
 .SH "RETURN VALUE"
-\fBtermkey_push_bytes\fP() the number of bytes consumed from the input (which may be smaller than the length provided, if the buffer runs out of space) or -1 cast to \fBsize_t\fP if an error occurs.
+\fBtermkey_push_bytes\fP() the number of bytes consumed from the input (which may be smaller than the length provided, if the buffer runs out of space) or -1 cast to \fBsize_t\fP if an error occurs, in which case \fIerrno\fP is set accordingly.
 .SH "SEE ALSO"
 .BR termkey_new (3),
 .BR termkey_getkey (3),
